feat: config ai and swagger
